--- a/web/stylesheets/src/pages/_definitions/_page--reports.scss
+++ b/web/stylesheets/src/pages/_definitions/_page--reports.scss
@@ -98,6 +98,11 @@
 		z-index: 2;
 	}
 
+	//FIXME add white-space nowrap to buttons eventually possibly?
+	.btn {
+		white-space: nowrap;
+	}
+
 	@include breakpoint($bp-tablets-portrait) {
 		width: calc(50% - 10px);
 		margin-right: 10px;
